--- a/www/index.html
+++ b/www/index.html
@@ -37,15 +37,15 @@
         <ion-side-menu side="left" id="main-menu" ng-controller="MenuController">
             <ion-content>
                 <ion-list>
-                    <ion-item class="foto">
-                        <div class="bg" ng-model="userid" style="background-image:url(http://graph.facebook.com/{{ userid }}/picture?width=320&amp;height=320) !important"></div><!-- /.bg -->
-                        <div class="imagen" ng-model="user" style="background-image:url(http://graph.facebook.com/{{ userid }}/picture?width=320&amp;height=320) !important"></div>
-                        <p class="nombre">Hola, {{user.first_name}}</p><!-- /.nombre -->
+                    <ion-item class="foto" ng-if="userid != ''">
+                        <div class="bg" ng-model="userid" style="background-image:url({{ imageurl }}) !important"></div><!-- /.bg -->
+                        <div class="imagen" ng-model="user" style="background-image:url({{ imageurl }}) !important"></div>
+                        <p class="nombre">Hola, {{nombre}}</p><!-- /.nombre -->
                     </ion-item>
-                    <!-- <ion-item menu-close="" href="#/app/login"><i class="icon ion-ios-home-outline"></i><span class="padding">Inicio</span></ion-item> -->
+                    <!--<ion-item menu-close="" href="#/app/login"><i class="icon ion-ios-home-outline"></i><span class="padding">Inicio</span></ion-item> -->
                     <ion-item menu-close="" href="#/list"><i class="icon ion-ios-list-outline"></i><span class="padding">Mis cuentos</span></ion-item>
-                    <!-- <ion-item menu-close="" href="#/desafio"><i class="icon ion-ios-bolt-outline"></i><span class="padding">Desaf&#xED;o</span></ion-item> -->
-                    <!-- <ion-item menu-close="" href="#/perfil"><i class="icon ion-ios-body-outline"></i><span class="padding">Mi perfil</span></ion-item> -->
+                    <!--<ion-item menu-close="" href="#/desafio"><i class="icon ion-ios-bolt-outline"></i><span class="padding">Desaf&#xED;o</span></ion-item> -->
+                    <!--<ion-item menu-close="" href="#/perfil"><i class="icon ion-ios-body-outline"></i><span class="padding">Mi perfil</span></ion-item> -->
                     <ion-item menu-close="" href="#/profile"><i class="icon ion-ios-body-outline"></i><span class="padding">Mi Perfil</span></ion-item>
                     <ion-item menu-close="" href="#/"><i class="icon ion-ios-gear-outline"></i><span class="padding">Preferencias</span></ion-item>
                 </ion-list>
